JOORSAND/src/objects/Round_robin__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>day_week__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day of the week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>end_time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_user__c</fullName>
        <label>last assigned user</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>list_Queue__c</fullName>
        <label>Name Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>night_users__c</fullName>
        <label>Night users</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>time_day__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Times of day</label>
        <type>Checkbox</type>
    </fields>
    <label>Round Robin</label>
</CustomObject>